--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.8.1
 Django==5.1.7
 django-cors-headers==4.7.0
+django-filter==25.1
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.5.0
 environs==14.1.1
