--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-filter==25.1
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.5.0
 environs==14.1.1
+gunicorn==23.0.0
 marshmallow==3.26.1
 packaging==24.2
 psycopg==3.2.6
